@@ -1,5 +1,10 @@
 2004-02-15  Julien MOUTTE  <julien@moutte.net>
 
+	* gst/switch/gstswitch.c: (gst_switch_loop): More fixes for 
+	correct data refcounting.
+
+2004-02-15  Julien MOUTTE  <julien@moutte.net>
+
 	* gst/switch/gstswitch.c: (gst_switch_change_state),
 	(gst_switch_class_init): Cleaning the sinkpads correctly on state
 	change, mostly the EOS flag.
